# omnimem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  QUICKSTART.md  README.md  README_ru.md  README_vi.md  ROADMAP.md  TROUBLESHOOTING.md  install.sh  omni_add.py  omni_bootstrap.py  omni_canvas.py  omni_chunking.py  omni_codemap.py  omni_config.py  omni_del.py  omni_doctor.py  omni_embeddings.py  omni_hooks.py  omni_import.py  omni_init.py  omni_mcp.py  omni_metadata.py  omni_note.py  omni_note_index.py  omni_ops.py  omni_paths.py  omni_quickstart.py  omni_redact.py  omni_reindex.py  omni_search.py  omni_search_core.py  omni_service.py  omni_update.py  omni_vault.py  omni_version.py  omnimem  omnimem.bat  (+9 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  bench_codemap_accuracy.py  bench_latency.py  bench_retrieval.py  common.py  run_all.py
benchmarks/results/: codemap_accuracy.json  latency.json  retrieval.json
docs/: benchmarks.md  chunking.md  codemap.md  configuration.md  faq.md  hooks.md  install-modes.md  notes.md  operations.md  redact.md  refactor-package-layout-v1.3.0.md  reindexing.md  release-checklist.md  search-filters.md  search-service.md
docs/integrations/: claude.md  codex.md  cursor.md  gemini.md  mcp.md
omnimem/: __init__.py  __main__.py  add.py  bootstrap.py  canvas.py  chunking.py  cli.py  codemap.py  config.py  del_.py  doctor.py  embeddings.py  hooks.py  import_.py  init.py  mcp.py  note.py  note_index.py  ops.py  paths.py  quickstart.py  reindex.py  search.py  search_core.py  service.py  update.py  vault.py  version.py
scripts/: codemod_omni_imports.py  omnimem  omnimem.bat  omnimem.ps1  setup.bat  setup.ps1  setup.sh
tests/: test_backup_includes_vault.py  test_bench_isolation.py  test_benchmarks_smoke.py  test_canvas.py  test_chunking.py  test_cli_version.py  test_codemap_multilang.py  test_codemap_python.py  test_codex_hooks.py  test_config.py  test_delete.py  test_doctor.py  test_hook_gated_reindex.py  test_hook_migration.py  test_hook_path_quoting.py  test_hooks_install.py  test_init_idempotent.py  test_init_per_agent.py  test_mcp_contract.py  test_mcp_runtime_cache.py  test_metadata.py  test_note_crud.py  test_note_index.py  test_omni_update.py  test_ops.py  test_paths.py  test_print_human.py  test_pyproject.py  test_quickstart.py  test_redact.py  test_reindex.py  test_release_metadata.py  test_search_all.py  test_search_filters.py  test_search_service.py  test_service_notes_codemap.py  test_service_runtime.py  test_stdin_utf8.py  test_temporal_queries.py  test_unified_cli.py  (+2 more)
